--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 <div class="container mt-4">    
     <header>
-        <img src="Imagenes\\banner.png" alt="TDIM">
+        <div class="col-sm-6">
+             <img src="Imagenes\\banner.png" alt="TDIM">
+        </div>
     </header>
     <nav>
         <a href="#">Inicio</a>
