--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container mt-4">    
     <header>
         <div class="col-sm-6">
-             <img src="Imagenes\\banner.png" alt="TDIM">
+             <img src="Imagenes\\banner.png" alt="TDIM" class="img-fluid">
         </div>
     </header>
     <nav>
