--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <div class="container mt-4">    
     <header>
         <div class="col-sm-6">
+            <center>
              <img src="Imagenes\\banner.png" alt="TDIM" class="img-fluid">
+            </center>
         </div>
     </header>
     <nav>
