--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <meta name=":::TDIM:::" content="Descripcion de lo que hace tu empresa">
     <title>:::TDIM:::</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Estilo.css">
 </head>
 <body>
-<div class="container mt-4">    
+<div class="container">
     <header>
-        <div class="col-sm-6">
-            <center>
-             <img src="Imagenes\\banner.png" alt="TDIM" class="img-fluid">
-            </center>
-        </div>
+        <img src="Imagenes\\banner.png" alt="TDIM">
     </header>
     <nav>
         <a href="#">Inicio</a>
@@ -80,15 +75,14 @@
             </div>
         </section>
     </main>
+<center>
     <footer>
         <p>Derechos de autor © 2024 COLEGIO TECNICO JOSE FELIX RESTREPO I.E.D. Todos los derechos reservados.</p>
     </footer>
+</center>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </div>
 </body>
 </html>
