--- a/index.html
+++ b/index.html
@@ -7,31 +7,23 @@
     <title>:::TDIM:::</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Estilo.css">
-    <style>
-        /* Agrega estilos personalizados aquí si es necesario */
-        /* Evita añadir estilos que afecten el comportamiento responsivo de Bootstrap */
-    </style>
 </head>
 <body>
-<div class="container-fluid"> <!-- Cambiado a .container-fluid para un ancho completo -->
-    <header class="bg-dark text-white py-3"> <!-- Ajuste de espaciado vertical -->
-        <div class="container">
-            <img src="Imagenes\\banner.png" alt="TDIM" class="img-fluid"> <!-- Ajuste para imágenes fluidas -->
-        </div>
+<div class="container">
+    <header>
+        <img src="Imagenes\\banner.png" alt="TDIM">
     </header>
-    <nav class="bg-dark text-white py-2"> <!-- Ajuste de espaciado vertical -->
-        <div class="container">
-            <a href="#" class="text-white">Inicio</a>
-            <a href="#" class="text-white">Sobre el Programa</a>
-            <a href="#" class="text-white">Cursos</a>
-            <a href="#" class="text-white">Inscripción</a>
-            <a href="#" class="text-white">Contacto</a>
-        </div>
+    <nav>
+        <a href="#">Inicio</a>
+        <a href="#">Sobre el Programa</a>
+        <a href="#">Cursos</a>
+        <a href="#">Inscripción</a>
+        <a href="#">Contacto</a>
     </nav>
     <main>
-        <section class="py-4"> <!-- Ajuste de espaciado vertical -->
+        <section>
             <div class="container">
-                <h2 class="text-center">Bienvenidos al Programa de Formación en Desarrollo e Integración Multimedia</h2> <!-- Alineación de texto centrada -->
+                <center><h2>Bienvenidos al Programa de Formación en Desarrollo e Integración Multimedia  </h2></center>
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -58,25 +50,39 @@
                         <span class="sr-only">Siguiente</span>
                     </a>
                 </div>
-                <div class="row justify-content-center"> <!-- Alineación del contenido al centro -->
-                    <div class="col-md-10">
-                        <p class="mt-4">Te damos la más cordial bienvenida al programa de formación en Técnico en Desarrollo e Integración Multimedia del Colegio Técnico José Félix Restrepo, ubicado en la localidad de San Cristóbal de la ciudad de Bogotá.</p>
-                        <p>Nuestro programa está diseñado para brindarte los conocimientos y habilidades necesarios en áreas como diseño gráfico, desarrollo web, animación, producción audiovisual y más. Con un enfoque práctico y actualizado, te prepararemos para enfrentar los desafíos del mundo digital y multimedia.</p>
-                        <p>Estamos comprometidos con tu éxito académico y profesional, y te invitamos a aprovechar al máximo esta oportunidad de crecimiento y aprendizaje.</p>
-                        <p>¡Bienvenido y mucho éxito en tu trayecto académico!</p>
-                    </div>
-                </div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                            </td>
+                            <td>
+                                <div class="mt-4">
+                                    <p>Te damos la más cordial bienvenida al programa de formación en Técnico en Desarrollo e Integración Multimedia del Colegio Técnico José Félix Restrepo, ubicado en la localidad de San Cristóbal de la ciudad de Bogotá.</p>
+                                    <p>Nuestro programa está diseñado para brindarte los conocimientos y habilidades necesarios en áreas como diseño gráfico, desarrollo web, animación, producción audiovisual y más. Con un enfoque práctico y actualizado, te prepararemos para enfrentar los desafíos del mundo digital y multimedia.</p>
+                                    <p>Estamos comprometidos con tu éxito académico y profesional, y te invitamos a aprovechar al máximo esta oportunidad de crecimiento y aprendizaje.</p>
+                                    <p>¡Bienvenido y mucho éxito en tu trayecto académico!</p>
+                                </div>   
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
     </main>
-    <footer class="bg-dark text-white py-3"> <!-- Ajuste de espaciado vertical -->
-        <div class="container">
-            <p class="text-center mb-0">Derechos de autor © 2024 COLEGIO TECNICO JOSE FELIX RESTREPO I.E.D. Todos los derechos reservados.</p> <!-- Alineación de texto centrada y eliminación de margen inferior -->
-        </div>
+<center>
+    <footer>
+        <p>Derechos de autor © 2024 COLEGIO TECNICO JOSE FELIX RESTREPO I.E.D. Todos los derechos reservados.</p>
     </footer>
-</div>
+</center>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</div>
 </body>
 </html>
