--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
     </main>
 <center>
     <footer>
-        <p>Derechos de autor © 2024 COLEGIO TECNICO JOSE FELIX RESTREPO I.E.D. Todos los derechos reservados.</p>
+         Derechos de autor © 2024
+       COLEGIO TECNICO JOSE FELIX RESTREPO I.E.D.
+       <p>Derechos reservados</p>
     </footer>
 </center>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
