--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Título de la Página</title>
     <link rel="stylesheet" href="Estilo.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 
 <header>
-    <h1><img src="Imagenes\\banner.png"></h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <img src="imagenes\\banner.png" class="img-fluid" alt="Imagen Responsiva">
+            </div>
+        </div>
+    </div>
 </header>
 
 <nav>
@@ -37,6 +44,10 @@
 <footer>
     <p>Derechos de autor © Año - Nombre de la Empresa</p>
 </footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
 </html>
