--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="imagenes\\banner.png" class="img-fluid" alt="Imagen Responsiva">
+                <img src="imagenes\\banner.png" class="img-fluid">
             </div>
         </div>
     </div>
