--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <img src="imagenes\\banner.png" class="img-fluid" alt="Imagen Responsiva">
+    <img src="imagenes\\banner.png">
     <div class="container">
         <div class="row">
             <div class="col">
