--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="imagenes\\banner.png" class="img-fluid" alt="Imagen Responsiva">
+                <h1>PROGRAMA DE FORMACIÓN EN TÉCNICO EN DESARROLLO E INTEGRACIÓN MULTIMEDIA (TDIM)</h1>
             </div>
         </div>
     </div>
